// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Item should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: 24px;
  width: 240px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-0:hover {
  text-decoration-color: inherit;
}

.emotion-1 {
  display: grid;
  width: 100%;
}

.emotion-3 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  border-radius: 50%;
}

.emotion-7 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-8 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-8.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

<a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <img
        alt="DSC07717"
        class="emotion-3 emotion-4"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-7"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 emotion-8"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: 24px;
  width: 240px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-0:hover {
  text-decoration-color: inherit;
}

.emotion-1 {
  display: grid;
  width: 100%;
}

.emotion-3 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  border-radius: 50%;
}

.emotion-7 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-8 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-8.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

<a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways extra-classname emotion-0"
    href="https://example.com"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <img
        alt="DSC07717"
        class="emotion-3 emotion-4"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-7"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 emotion-8"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: 24px;
  width: 240px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-0:hover {
  text-decoration-color: inherit;
}

.emotion-1 {
  display: grid;
  width: 100%;
}

.emotion-3 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  border-radius: 50%;
}

.emotion-7 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-8 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-8.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

<a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <img
        alt="DSC07717"
        class="emotion-3 emotion-4"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-7"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 emotion-8"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithoutImage 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: 24px;
  width: 240px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-0:hover {
  text-decoration-color: inherit;
}

.emotion-1 {
  display: grid;
  width: 100%;
}

.emotion-5 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-6 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-6.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

<a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-3 emotion-4"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-5"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 emotion-6"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithoutJobTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: 24px;
  width: 240px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-0:hover {
  text-decoration-color: inherit;
}

.emotion-1 {
  display: grid;
  width: 100%;
}

.emotion-3 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  border-radius: 50%;
}

.emotion-7 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.4;
}

<a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <img
        alt="DSC07717"
        class="emotion-3 emotion-4"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-7"
      >
        Foobar
      </h6>
    </div>
  </a>
</DocumentFragment>
`;
